--- a/index.html
+++ b/index.html
@@ -92,8 +92,14 @@
         };
 
         // Use environment variables for Firebase config and App ID
-        const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {};
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'sweechip-default';
+        const firebaseConfig = {
+  apiKey: "AIzaSyDYfl0TiMFHceE88GkHcl7XHDli-LSbArk",
+  authDomain: "a037b08f.firebaseapp.com",
+  projectId: "a037b08f",
+  storageBucket: "a037b08f.firebasestorage.app",
+  messagingSenderId: "485696187373",
+  appId: "1:485696187373:web:f9b40596c0d5eab5ae15e4",
+  measurementId: "G-QPJ29TZBKV"
 
         // --- Firestore Collection Paths ---
         const DAILY_RECORDS_COLLECTION = `artifacts/${appId}/public/data/daily_records`;
@@ -2142,4 +2148,5 @@
 
 </body>
 </html>
+
 
